Fixed typos and css in login page

--- a/angular.json
+++ b/angular.json
@@ -3,17 +3,17 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "project": {
+    "healthhub": {
       "projectType": "application",
       "schematics": {},
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "healthhub",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/healthub",
+            "outputPath": "dist/healthhub",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -63,18 +63,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "healthub:build"
+            "browserTarget": "healthhub:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "healthub:build:production"
+              "browserTarget": "healthhub:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "healthub:build"
+            "browserTarget": "healthhub:build"
           }
         },
         "test": {
@@ -112,16 +112,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "healthub:serve"
+            "devServerTarget": "healthhub:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "healthub:serve:production"
+              "devServerTarget": "healthhub:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "healthub"
+  "defaultProject": "healthhub"
 }
