--- a/angular.json
+++ b/angular.json
@@ -90,9 +90,17 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/al-shah/css/materialize.min.css",
+              "node_modules/al-shah/css/style.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/al-shah/js/jquery-2.1.1.min.js",
+              "node_modules/al-shah/js/materialize.min.js",
+              "node_modules/al-shah/js/init.js"
+            ]
           }
         },
         "lint": {
@@ -123,5 +131,8 @@
       }
     }
   },
-  "defaultProject": "healthhub"
+  "defaultProject": "healthhub",
+  "cli": {
+    "analytics": "22133f90-44e4-48a5-8d8e-b444ea8453d0"
+  }
 }
