--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "al-shah": "^1.9.7",
+    "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "path": "^0.12.7",
     "rxjs": "~6.5.4",
