--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@angular/router": "~9.1.9",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
+    "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
