--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/compiler": "~9.1.9",
     "@angular/compiler-cli": "^9.1.11",
     "@angular/core": "~9.1.9",
+    "@angular/fire": "^6.0.2",
     "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "~9.1.9",
     "@angular/material": "^9.2.4",
@@ -30,6 +31,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase": "^7.16.1",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
